@@ -7,7 +7,7 @@ MD5 d2a8db48485977f21067a20798219821 files/patches/000_all_makefile-include-dire
 RMD160 ae8b7c2e628681fff153bfa10242e62df5ab2e10 files/patches/000_all_makefile-include-directory.patch 342
 SHA256 2da16602ef3c4cb040ac80a9fed18660fadcae2e843f425da0872f50aa5356db files/patches/000_all_makefile-include-directory.patch 342
 DIST VMware-workstation-e.x.p-36983.i386.tar.gz 202626242 RMD160 1d5f9b2dc407caff9a3da37d8a21f0c5937ed1ce SHA1 43d5df8fcc86925c05a25e60cb0f2a01b3c9a74a SHA256 44edf4f73a869c8d390a0b0a34eda48258316710c759354f1c5c8deb0624acec
-DIST vmware-any-any-update105.tar.gz 296970 RMD160 5da1b91c81ff1023c8f4dbc3ae02f7f180785e67 SHA1 179812c0750f450754b82fbc0f57e44dd2b84945 SHA256 568939479294b4200e667ec0e3ad0d24f0e37356ccb3267b21de803530694426
+DIST vmware-any-any-update107.tar.gz 296947 RMD160 4223de0f76f0063073b0d92c08a1b87d7247ef3b SHA1 35032158a8a2b4f89767fb438540e29448841b00 SHA256 b2bdd031fc192baad1418dc6cf270eb7f4a674bc42806498f5cb91c4c4bac198
 EBUILD vmware-modules-1.0.0.11-r1.ebuild 311 RMD160 c1022016ab270313119855fe76745f9e5411ef26 SHA1 3f4408471a775cc68d2401808f2b8bec4f950cd7 SHA256 7a8c427e8c4c55feb3ff87d7085938373bd9154e771cc8ba2ee969eb0cd771cb
 MD5 707b0a7edf016c7b3fc187f43b1f17c5 vmware-modules-1.0.0.11-r1.ebuild 311
 RMD160 c1022016ab270313119855fe76745f9e5411ef26 vmware-modules-1.0.0.11-r1.ebuild 311
@@ -28,15 +28,15 @@ MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b0
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
-MD5 baca77d2270add57b34bdf5a741627e8 files/digest-vmware-modules-1.0.0.11-r1 274
-RMD160 c61ea374b61d2913280e74d304cef2a4594dd825 files/digest-vmware-modules-1.0.0.11-r1 274
-SHA256 cb9f8bdef0f77dbd2358a7059acb0e5cabbe62f7a489369e13fcfcbd370e08e1 files/digest-vmware-modules-1.0.0.11-r1 274
-MD5 baca77d2270add57b34bdf5a741627e8 files/digest-vmware-modules-1.0.0.13-r1 274
-RMD160 c61ea374b61d2913280e74d304cef2a4594dd825 files/digest-vmware-modules-1.0.0.13-r1 274
-SHA256 cb9f8bdef0f77dbd2358a7059acb0e5cabbe62f7a489369e13fcfcbd370e08e1 files/digest-vmware-modules-1.0.0.13-r1 274
-MD5 baca77d2270add57b34bdf5a741627e8 files/digest-vmware-modules-1.0.0.15-r1 274
-RMD160 c61ea374b61d2913280e74d304cef2a4594dd825 files/digest-vmware-modules-1.0.0.15-r1 274
-SHA256 cb9f8bdef0f77dbd2358a7059acb0e5cabbe62f7a489369e13fcfcbd370e08e1 files/digest-vmware-modules-1.0.0.15-r1 274
+MD5 d74ef70df890173ad9744802efd18d41 files/digest-vmware-modules-1.0.0.11-r1 274
+RMD160 005f28c749d43358c0693cb81012015f3387e845 files/digest-vmware-modules-1.0.0.11-r1 274
+SHA256 79292b48f2ecc89ab77a0fc8b1b3d0e500d3303e21e1ef3581d0b1b40b8137c7 files/digest-vmware-modules-1.0.0.11-r1 274
+MD5 d74ef70df890173ad9744802efd18d41 files/digest-vmware-modules-1.0.0.13-r1 274
+RMD160 005f28c749d43358c0693cb81012015f3387e845 files/digest-vmware-modules-1.0.0.13-r1 274
+SHA256 79292b48f2ecc89ab77a0fc8b1b3d0e500d3303e21e1ef3581d0b1b40b8137c7 files/digest-vmware-modules-1.0.0.13-r1 274
+MD5 d74ef70df890173ad9744802efd18d41 files/digest-vmware-modules-1.0.0.15-r1 274
+RMD160 005f28c749d43358c0693cb81012015f3387e845 files/digest-vmware-modules-1.0.0.15-r1 274
+SHA256 79292b48f2ecc89ab77a0fc8b1b3d0e500d3303e21e1ef3581d0b1b40b8137c7 files/digest-vmware-modules-1.0.0.15-r1 274
 MD5 90b29a844a96a04fdbb50d4c44329511 files/digest-vmware-modules-1.0.0.16 316
 RMD160 63955601456929c5dc9dedd544e3510c3f865ae0 files/digest-vmware-modules-1.0.0.16 316
 SHA256 41523fb5125cac84b70f6048d6e960882a5d5dc9e336adedf100c9be95005a4e files/digest-vmware-modules-1.0.0.16 316
