@@ -1,9 +1,9 @@
 MD5 9846bff6c3c8af97d4e3ae2700f8dd3a VMware-server-1.0.1-29996.tar.gz 105500734
 RMD160 f4d5805a230afd45ee2234065ffc7c172dd12e18 VMware-server-1.0.1-29996.tar.gz 105500734
 SHA256 08cfa19d9e5475fdaf12114d99bdeecacfd703dd3ec129958bf6f7e98d11641b VMware-server-1.0.1-29996.tar.gz 105500734
-MD5 edad0bd1abf80caaf672498e14ad8727 vmware-any-any-update105.tar.gz 296970
-RMD160 5da1b91c81ff1023c8f4dbc3ae02f7f180785e67 vmware-any-any-update105.tar.gz 296970
-SHA256 568939479294b4200e667ec0e3ad0d24f0e37356ccb3267b21de803530694426 vmware-any-any-update105.tar.gz 296970
+MD5 a424019aa70983686b8c8b7a963b9995 vmware-any-any-update107.tar.gz 296947
+RMD160 4223de0f76f0063073b0d92c08a1b87d7247ef3b vmware-any-any-update107.tar.gz 296947
+SHA256 b2bdd031fc192baad1418dc6cf270eb7f4a674bc42806498f5cb91c4c4bac198 vmware-any-any-update107.tar.gz 296947
 MD5 062f83a22822b6e4d4a176e3648c38d8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
 SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
