@@ -35,11 +35,11 @@ MD5 aa1b576735134579f04b29763901dc4f files/vmware-workstation.xml 1592
 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware-workstation.xml 1592
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware-workstation.xml 1592
 DIST VMware-workstation-e.x.p-36983.i386.tar.gz 202626242 RMD160 1d5f9b2dc407caff9a3da37d8a21f0c5937ed1ce SHA1 43d5df8fcc86925c05a25e60cb0f2a01b3c9a74a SHA256 44edf4f73a869c8d390a0b0a34eda48258316710c759354f1c5c8deb0624acec
-DIST vmware-any-any-update105.tar.gz 296970 RMD160 5da1b91c81ff1023c8f4dbc3ae02f7f180785e67 SHA1 179812c0750f450754b82fbc0f57e44dd2b84945 SHA256 568939479294b4200e667ec0e3ad0d24f0e37356ccb3267b21de803530694426
-EBUILD vmware-workstation-6.0.0.36983.ebuild 2754 RMD160 3f1223d2d34d6b5fdf4d457f3bdc83f8af8bcbf2 SHA1 1d68e0bf0f7d61ff7123d3683509929bd1aaf946 SHA256 485fc6cfea34fc5aae5b3f80a0b1cf28d8727aca2a7d3bd877278767f7da0969
-MD5 063527c61b50e915e853cd6380491cfb vmware-workstation-6.0.0.36983.ebuild 2754
-RMD160 3f1223d2d34d6b5fdf4d457f3bdc83f8af8bcbf2 vmware-workstation-6.0.0.36983.ebuild 2754
-SHA256 485fc6cfea34fc5aae5b3f80a0b1cf28d8727aca2a7d3bd877278767f7da0969 vmware-workstation-6.0.0.36983.ebuild 2754
+DIST vmware-any-any-update107.tar.gz 296947 RMD160 4223de0f76f0063073b0d92c08a1b87d7247ef3b SHA1 35032158a8a2b4f89767fb438540e29448841b00 SHA256 b2bdd031fc192baad1418dc6cf270eb7f4a674bc42806498f5cb91c4c4bac198
+EBUILD vmware-workstation-6.0.0.36983.ebuild 2784 RMD160 64bce5477af94653fe5002850ca1d50efc014752 SHA1 8c84de1ab9fa3640664f8da690695b2251879da3 SHA256 3fba296badd2ca0b468e443ba6024fecf9b6639a862afbfe61232abaac732b00
+MD5 7a9cd75973f96fab16e567a02a989436 vmware-workstation-6.0.0.36983.ebuild 2784
+RMD160 64bce5477af94653fe5002850ca1d50efc014752 vmware-workstation-6.0.0.36983.ebuild 2784
+SHA256 3fba296badd2ca0b468e443ba6024fecf9b6639a862afbfe61232abaac732b00 vmware-workstation-6.0.0.36983.ebuild 2784
 MISC ChangeLog 12691 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac SHA1 d8e4b3b6d88469777866d80b513777171951a10c SHA256 af61d26d4fab464194c25841ce6dc6050dc5828ebe3eaf170dc531f627d7be7c
 MD5 3d2f699f8c2e2a402636dfc0f5822dda ChangeLog 12691
 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac ChangeLog 12691
@@ -48,6 +48,6 @@ MISC metadata.xml 339 RMD160 9f4931e525280fd376eb7ac3e42c369acd23a33e SHA1 3948d
 MD5 a4e5ebe5e931d6196fd49550e067b078 metadata.xml 339
 RMD160 9f4931e525280fd376eb7ac3e42c369acd23a33e metadata.xml 339
 SHA256 bb60a871a58964feaa59ec824a5d511455054461f0394a57a8c9ca019a0f4593 metadata.xml 339
-MD5 7f303f6ec27cf95455c40f24c2f85ade files/digest-vmware-workstation-6.0.0.36983 590
-RMD160 555557202455cd4476a9ad14aad406e89ed7b4c0 files/digest-vmware-workstation-6.0.0.36983 590
-SHA256 7a923492a600d07e999c2f95dffdffa83b50978a4e940e6c575701f124c9acbc files/digest-vmware-workstation-6.0.0.36983 590
+MD5 6de0ffe7e4f4d384019af4bfe93c1a76 files/digest-vmware-workstation-6.0.0.36983 590
+RMD160 024d633fdf38c76bf615c01692fbfe870b2cc1ab files/digest-vmware-workstation-6.0.0.36983 590
+SHA256 ba14941ab5b8650277057fb7b57a09889afa52f77ea26b25947fc5706cf69193 files/digest-vmware-workstation-6.0.0.36983 590
